Small-card component.
small-card component creation.

--- a/blog-angular/src/app/components/small-card/small-card.component.html
+++ b/blog-angular/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,15 @@
-<p>small-card works!</p>
+<div class="container__small-card">
+
+    <div class="small-card__photo">
+        <img 
+        src="https://cdn.shopify.com/s/files/1/0273/8080/9781/products/banana_joe_imgaer.png?v=1673306686" 
+        alt="">
+    </div>
+
+    <div class="small-card__title">
+        <h2><a href="#">Título do small-card entra aqui, ó.</a></h2>
+    </div>
+
+</div>
+
+<hr/>
