menu-bar component
menu-bar component created. All links working.

--- a/blog-angular/src/app/components/menu-bar/menu-bar.component.html
+++ b/blog-angular/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,14 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+    <ul>
+        <li><a 
+            href="https://www.linkedin.com/in/evertonbarbosa-dev/"
+            target="_blank"
+            >LinkedIn</a></li>
+        <li><span>|</span></li>
+        <li><a href="https://github.com/nbeverton"
+            target="_blank"
+            >Github</a></li>
+        <li><span>|</span></li>
+        <li><a href="#">Projetos</a></li>
+    </ul>
+</div>
