--- a/blog-angular/src/app/components/small-card/small-card.component.html
+++ b/blog-angular/src/app/components/small-card/small-card.component.html
@@ -2,12 +2,12 @@
 
     <div class="small-card__photo">
         <img 
-        src="https://cdn.shopify.com/s/files/1/0273/8080/9781/products/banana_joe_imgaer.png?v=1673306686" 
+        src="{{ photoCoverSmallCard }}" 
         alt="">
     </div>
 
     <div class="small-card__title">
-        <h2><a href="#">Título do small-card entra aqui, ó.</a></h2>
+        <h2><a href="#">{{ titleSmallCard }}</a></h2>
     </div>
 
 </div>
