--- a/blog-angular/src/app/components/big-card/big-card.component.html
+++ b/blog-angular/src/app/components/big-card/big-card.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="big-card__title">
-        <h1><a href="#">
+        <h1><a  [routerLink]="['content', 1]">
             {{ cardTitle }}
         </a>
         </h1>
