--- a/blog-angular/src/app/components/small-card/small-card.component.html
+++ b/blog-angular/src/app/components/small-card/small-card.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="small-card__title">
-        <h2><a href="#">{{ titleSmallCard }}</a></h2>
+        <h2><a [routerLink]="['content', Id]">{{ titleSmallCard }}</a></h2>
     </div>
 
 </div>
