Update to PlayStore implementation.
I updated the project to integrate the PlayStore project.

--- a/blog-angular/src/app/pages/content/content.component.html
+++ b/blog-angular/src/app/pages/content/content.component.html
@@ -4,8 +4,11 @@
         <img src="{{ photoCover }}" alt="">
     </div>
 
+    <!-- TODO: Criar uma nova tag para substituir o "contentTitle" -->
     <div class="content__title">
-        <h1>{{ contentTitle }}</h1>
+        <a href="{{ contentTitle }}">
+            <h1>{{ contentTitle }}</h1>
+        </a>
         <hr>
     </div>
 
