--- a/blog-angular/src/app/pages/home/home.component.html
+++ b/blog-angular/src/app/pages/home/home.component.html
@@ -11,11 +11,13 @@
         > </app-big-card>
     </div>
 
+
+    <!-- A partir daqui os small-cards -->
     <div class="articles__others">
         <app-small-card
             Id="2"
-            photoCoverSmallCard="https://cdn.shopify.com/s/files/1/0273/8080/9781/products/banana_joe_imgaer.png?v=1673306686"
-            titleSmallCard="Título do small-card entra aqui, ó"
+            photoCoverSmallCard="assets/PlayStore-project.png"
+            titleSmallCard="Projeto: PlayStore page"
         ></app-small-card>
 
         <app-small-card
@@ -27,7 +29,7 @@
 
         <app-small-card
             Id="4"
-            photoCoverSmallCard="https://wbd.com/wp-content/uploads/2022/09/fece6f45-3441-0d94-30d5-5bd4e48382bf.jpg"
+            photoCoverSmallCard="https://cdn.shopify.com/s/files/1/0273/8080/9781/products/banana_joe_imgaer.png?v=1673306686"
             titleSmallCard="Mais um título de um small-card aqui."
         ></app-small-card>
     </div>
