Update the images
Updated the images from my PlayStore page.

--- a/blog-angular/src/app/pages/home/home.component.html
+++ b/blog-angular/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@
     <div class="articles__others">
         <app-small-card
             Id="2"
-            photoCoverSmallCard="assets/PlayStore-project.png"
+            photoCoverSmallCard="assets/PlayStoreProject.png"
             titleSmallCard="Projeto: PlayStore page"
         ></app-small-card>
 
