--- a/blog-angular/src/app/app.component.css
+++ b/blog-angular/src/app/app.component.css
@@ -3,3 +3,22 @@ header{
     justify-content: center;
     margin-top: 15px;
 }
+
+@media screen and (max-width: 800px) {
+  *{
+    display: flex;
+    max-width: 100%;
+    justify-content: center;
+  }
+
+    header{
+      max-width: 100%;
+    }
+
+    body{
+      padding: 0 10px;
+      display: flex;
+      max-width: 100%;
+      justify-content: center;
+    }
+}
