--- a/blog-angular/src/app/app.component.html
+++ b/blog-angular/src/app/app.component.html
@@ -2,4 +2,7 @@
     <app-menu-bar></app-menu-bar>
 </header>
 
-<router-outlet></router-outlet>
+<body>
+    <router-outlet></router-outlet>
+</body>
+
