--- a/blog-angular/src/app/components/big-card/big-card.component.css
+++ b/blog-angular/src/app/components/big-card/big-card.component.css
@@ -26,3 +26,21 @@
     color: gray;
     margin: 15px 5px;
 }
+
+@media screen and (max-width: 800px) {
+    .container__big-card{
+        max-width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+    @media screen and (max-width: 400px) {
+        .container__big-card{
+            max-width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+}
