--- a/blog-angular/src/app/pages/home/home.component.css
+++ b/blog-angular/src/app/pages/home/home.component.css
@@ -5,3 +5,24 @@
     justify-content: center;
 }
 
+@media screen and (max-width: 800px) {
+    .container__articles{
+      display: flex;
+      flex-direction: column;
+      max-width: 100%;
+      justify-content: center;
+    }
+
+    .container__articles > .articles__main{
+        max-width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .container__articles > .articles__others{
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
