--- a/blog-angular/src/app/app.component.html
+++ b/blog-angular/src/app/app.component.html
@@ -1,7 +1,9 @@
-<header>
+<header class="d-flex justify-content-center mt-3">
     <app-menu-bar></app-menu-bar>
 </header>
 
-<body>
+<main class="container-fluid d-flex justify-content-center px-3">
     <router-outlet></router-outlet>
-</body>
+</main>
+
+
