--- a/blog-angular/src/app/components/big-card/big-card.component.css
+++ b/blog-angular/src/app/components/big-card/big-card.component.css
@@ -1,46 +1,4 @@
-.container__big-card{
-    margin: 0 30px;
-
-    width: 400px;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-}
-
-.big-card__photo > img{
-    width: 400px;
-}
-
-.big-card__title > h1{
+a{
     font-size: 25px;
-    margin: 15px 5px;
-}
-
-.big-card__title > h1 > a{
-    text-decoration: none;
-}
-
-.big-card__description > p{
-    color: gray;
-    margin: 15px 5px;
-}
-
-@media screen and (max-width: 800px) {
-    .container__big-card{
-        max-width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-}
-
-    @media screen and (max-width: 400px) {
-        .container__big-card{
-            max-width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+    margin-bottom: 15px;
 }
