--- a/blog-angular/src/app/components/big-card/big-card.component.html
+++ b/blog-angular/src/app/components/big-card/big-card.component.html
@@ -1,24 +1,32 @@
-<div class="container__big-card">
+<div class="card mx-3 mb-4 border-0 bg-transparent text-white" style="width: 400px; height: 500px;">
 
-    <div class="big-card__photo">
-        <img 
-            src="{{ photoCover }}"
-            alt=""
-            height="200px"
+    <!-- Imagem do card -->
+    <div class="d-flex justify-content-center">
+      <img 
+        [src]="photoCover" 
+        alt="Card Image" 
+        class="img-fluid" 
+        style="height: 200px; object-fit: cover;"
+      >
+    </div>
+  
+    <!-- Título do card -->
+    <div class="card-body d-flex flex-column justify-content-center align-items-center text-center">
+
+      <h1 class="h5 mb-3">
+        <a 
+          [routerLink]="['content', 1]" 
+          class="text-decoration-none text-white"
         >
-    </div>
-
-    <div class="big-card__title">
-        <h1><a  [routerLink]="['content', 1]">
-            {{ cardTitle }}
+          {{ cardTitle }}
         </a>
-        </h1>
+      </h1>
+  
+      <!-- Descrição -->
+      <p class="mb-0">
+        {{ cardDescription }}
+      </p>
     </div>
-
-    <div class="big-card__description">
-        <p>
-            {{ cardDescription }}
-        </p>
-    </div>
-
-</div>
+    
+  </div>
+  
