--- a/blog-angular/src/app/components/certificados/certificados.component.css
+++ b/blog-angular/src/app/components/certificados/certificados.component.css
@@ -1,16 +1,42 @@
-.container-carousel{
-    display: flex;
+/* Customização das setas do carrossel */
+.custom-carousel-icon {
+    background-color: black; /* Cor preta */
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    opacity: 1;
 }
 
+/* Legenda no carrossel */
+.custom-caption {
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5); /* Fundo preto com 50% de transparência */
+    color: white;
+    width: 100%;
+    padding: 10px 0;
+    text-align: center;
+    font-size: 16px;
+}
+
+/* Miniaturas abaixo do carrossel */
+.thumbnail {
+    width: 100px; /* Tamanho da miniatura */
+    height: auto;
+    cursor: pointer;
+    border: 2px solid transparent;
+    transition: border-color 0.3s;
+}
+
+.thumbnail:hover {
+    border-color: black; /* Destaque na miniatura ao passar o mouse */
+}
+
+/* Ajuste geral do carrossel */
 .carousel-inner img {
-    max-height: 500px;
     object-fit: cover;
-  }
-
-.carousel-item{
-
+    height: 500px; /* Altura padrão das imagens */
 }
 
-.active{
 
-}
+
