--- a/blog-angular/src/app/components/menu-bar/menu-bar.component.html
+++ b/blog-angular/src/app/components/menu-bar/menu-bar.component.html
@@ -1,24 +1,50 @@
-<div class="container__menu-bar">
-
-    <ul>
-        <li><a 
-            href="https://www.linkedin.com/in/evertonbarbosa-dev/"
-            target="_blank"
-            >LinkedIn</a></li>
-
-        <li><span>|</span></li>
-
-        <li><a href="https://github.com/nbeverton"
-            target="_blank"
-            >Github</a></li>
-
-        <li><span>|</span></li>
-
-        <li><a href="#">Projetos</a></li>
-
-        <li><span>|</span></li>
-
-        <li><a href="/certificados"> Certificados </a></li>
-    </ul>
-
-</div>
+<div class="container">
+  <nav class="d-flex justify-content-center align-items-center py-2">
+    <ul class="nav align-items-center">
+      <li class="nav-item">
+        <a 
+          href="/" 
+          class="nav-link text-light fs-5"
+        >
+          Início
+        </a>
+        </li>
+        <li class="nav-item d-flex align-items-center">
+          <span class="text-light mx-2">|</span>
+        </li>
+        <li class="nav-item">
+          <a 
+            href="https://www.linkedin.com/in/evertonbarbosa-dev/" 
+            target="_blank" 
+            class="nav-link text-light fs-5"
+          >
+            LinkedIn
+          </a>
+        </li>
+        <li class="nav-item d-flex align-items-center">
+          <span class="text-light mx-2">|</span>
+        </li>
+        <li class="nav-item">
+          <a 
+            href="https://github.com/nbeverton" 
+            target="_blank" 
+            class="nav-link text-light fs-5"
+          >
+            Github
+          </a>
+        </li>
+        <li class="nav-item d-flex align-items-center">
+          <span class="text-light mx-2">|</span>
+        </li>
+        <li class="nav-item">
+          <a 
+            href="/certificados" 
+            class="nav-link text-light fs-5"
+          >
+            Certificados
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  
