--- a/blog-angular/src/app/components/menu-title/menu-title.component.css
+++ b/blog-angular/src/app/components/menu-title/menu-title.component.css
@@ -1,4 +1,4 @@
-.container__menu-title{
+/* .container__menu-title{
     color: white;
 }
 
@@ -41,4 +41,4 @@
    .container__menu-title > hr{
     max-width: 100%;
 }
-}
+} */
