--- a/blog-angular/src/app/components/small-card/small-card.component.html
+++ b/blog-angular/src/app/components/small-card/small-card.component.html
@@ -1,15 +1,28 @@
-<div class="container__small-card">
+<div class="d-flex align-items-center mb-3">
 
-    <div class="small-card__photo">
-        <img 
-        src="{{ photoCoverSmallCard }}" 
-        alt="">
+    <!-- Imagem -->
+    <div class="d-flex mb-3">
+      <img 
+        [src]="photoCoverSmallCard" 
+        alt="Small Card Image" 
+        class="img-fluid"
+        style="width: 400px; height: auto; object-fit: cover;"
+      >
     </div>
-
-    <div class="small-card__title">
-        <h2><a [routerLink]="['content', Id]">{{ titleSmallCard }}</a></h2>
+  
+    <!-- Título com espaçamento -->
+    <div style="margin-left: 20px;">
+      <h2 class="h6 mb-6">
+        <a 
+          [routerLink]="['content', Id]" 
+          class="text-decoration-none text-white"
+        >
+          {{ titleSmallCard }}
+        </a>
+      </h2>
     </div>
-
-</div>
-
-<hr/>
+  
+  </div>
+  
+  <hr class="border-light my-3">
+  
