--- a/blog-angular/src/app/pages/content/content.component.html
+++ b/blog-angular/src/app/pages/content/content.component.html
@@ -1,23 +1,29 @@
-<div class="container__content">
+<div class="container d-flex flex-column justify-content-center align-items-center vh-100 py-4">
 
-    <div class="content__cover">
-        <img src="{{ photoCover }}" alt="">
+    <!-- Imagem de capa -->
+    <div class="mb-4">
+      <img src="{{ photoCover }}" class="img-fluid" style="max-width: 500px; min-width: 100px;" alt="Capa">
     </div>
-
-    <!-- TODO: Criar uma nova tag para substituir o "contentTitle" -->
-    <div class="content__title">
-        <a href="{{ contentTitle }}">
-            <h1>{{ contentTitle }}</h1>
-        </a>
-        <hr>
+  
+    <!-- Título -->
+    <div class="text-center">
+      <a href="{{ contentTitle }}" class="text-decoration-none">
+        <h1 class="fw-light mb-3">{{ contentTitle }}</h1>
+      </a>
+      <hr class="w-100">
     </div>
-
-    <div class="content__description">
-        <p>{{ contentDescription }}</p>
+  
+    <!-- Descrição -->
+    <div class="text-center">
+      <p class="text-muted fw-light mt-3">{{ contentDescription }}</p>
     </div>
-
-    <div class="content__button">
-        <a href=""> << voltar </a>
+  
+    <!-- Botão voltar -->
+    <div class="mt-4">
+      <a href="" class="btn btn-outline-light">
+        &laquo; Voltar
+      </a>
     </div>
-
-</div>
+  
+  </div>
+  
