Small ajuste in menu-title and menu-bar
It helps to correct the responsivity issues.

--- a/blog-angular/src/app/components/menu-bar/menu-bar.component.html
+++ b/blog-angular/src/app/components/menu-bar/menu-bar.component.html
@@ -1,50 +1,49 @@
 <div class="container">
-  <nav class="d-flex justify-content-center align-items-center py-2">
-    <ul class="nav align-items-center">
+  <nav class="d-flex flex-column flex-md-row justify-content-center align-items-center py-2">
+    <ul class="nav flex-column flex-md-row align-items-center">
       <li class="nav-item">
         <a 
           href="/" 
-          class="nav-link text-light fs-5"
+          class="nav-link text-light fs-6 fs-md-5 text-center"
         >
           Início
         </a>
-        </li>
-        <li class="nav-item d-flex align-items-center">
-          <span class="text-light mx-2">|</span>
-        </li>
-        <li class="nav-item">
-          <a 
-            href="https://www.linkedin.com/in/evertonbarbosa-dev/" 
-            target="_blank" 
-            class="nav-link text-light fs-5"
-          >
-            LinkedIn
-          </a>
-        </li>
-        <li class="nav-item d-flex align-items-center">
-          <span class="text-light mx-2">|</span>
-        </li>
-        <li class="nav-item">
-          <a 
-            href="https://github.com/nbeverton" 
-            target="_blank" 
-            class="nav-link text-light fs-5"
-          >
-            Github
-          </a>
-        </li>
-        <li class="nav-item d-flex align-items-center">
-          <span class="text-light mx-2">|</span>
-        </li>
-        <li class="nav-item">
-          <a 
-            href="/certificados" 
-            class="nav-link text-light fs-5"
-          >
-            Certificados
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  
+      </li>
+      <li class="nav-item d-none d-md-flex align-items-center">
+        <span class="text-light mx-2">|</span>
+      </li>
+      <li class="nav-item">
+        <a 
+          href="https://www.linkedin.com/in/evertonbarbosa-dev/" 
+          target="_blank" 
+          class="nav-link text-light fs-6 fs-md-5 text-center"
+        >
+          LinkedIn
+        </a>
+      </li>
+      <li class="nav-item d-none d-md-flex align-items-center">
+        <span class="text-light mx-2">|</span>
+      </li>
+      <li class="nav-item">
+        <a 
+          href="https://github.com/nbeverton" 
+          target="_blank" 
+          class="nav-link text-light fs-6 fs-md-5 text-center"
+        >
+          Github
+        </a>
+      </li>
+      <li class="nav-item d-none d-md-flex align-items-center">
+        <span class="text-light mx-2">|</span>
+      </li>
+      <li class="nav-item">
+        <a 
+          href="/certificados" 
+          class="nav-link text-light fs-6 fs-md-5 text-center"
+        >
+          Certificados
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
