--- a/blog-angular/src/app/components/menu-title/menu-title.component.html
+++ b/blog-angular/src/app/components/menu-title/menu-title.component.html
@@ -1,5 +1,5 @@
 <div class="container text-center my-4">
     <hr class="my-2 border-secondary">
-    <h1 class="display-1 fw-light text-white style=font-family: 'Quicksand', sans-serif;">nbeverton.</h1>
+    <h1 class="display-2 fw-light text-white" style="font-family: 'Quicksand', sans-serif;">nbeverton</h1>
     <hr class="my-2 border-secondary">
 </div>
